--- a/about_pca.ipynb
+++ b/about_pca.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.datasets import load_breast_cancer\n",
-    "import mglearn"
+    "import mglearn\n",
+    "import scipy"
    ]
   },
   {
